--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,9 @@ main{
 header{
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
   margin-bottom: 50px;
+  align-items: center;
 }
 
 header a{
@@ -25,6 +27,7 @@ header a{
 
 header a.logo{
   font-weight: bold;
+  font-size: 1.5rem;
 }
 
 header nav {
@@ -36,9 +39,28 @@ div.post {
   display: grid;
   grid-template-columns: 0.9fr 1.1fr;
   gap: 20px;
+  margin-bottom: 35px;
 }
 
 div.post div.texts h2{
   margin: 0;
-  font-size: 1.6rem;
+  font-size: 1.7rem;
+}
+
+div.post p.info {
+  margin: 4px 0;
+  color: #888;
+  font-size: .9rem;
+  font-weight: bold;
+  display: flex;
+  gap: 10px;
+}
+
+div.post p.info a.author{
+  color: #333;
+}
+
+div.post p.summary {
+  margin: 8px 0;
+  line-height: 1.4rem;
 }
